# rover-code

./: .gitignore  README.md  comms_setup.txt  file_template.txt  generic_cam_test.launch  hello_zed.py  pwm.py  setup.bash
.devcontainer/: Dockerfile  devcontainer.json
archive/: comms_setup.txt
archive/gui/: README.md  package-lock.json  package.json
archive/ros/: .gitignore
archive/test_car/: pin_demo.py
base_station/: install_ros_packages.bash  mosquitto.conf
base_station/gui/: README.md  angular.json  package-lock.json  package.json
base_station/gui/src/: main.ts
base_station/src/joystick/: package.xml  setup.py
commu-intell/gui/: README.md  angular.json  nginx.conf  package-lock.json  package.json
commu-intell/gui/src/: index.html
commu-intell/ros/: .gitignore  python_package.txt  python_packages.txt  ros_package.bash  setup.bash
commu-intell/ros2/: python_packages.txt
commu-intell/ros2/src/tutorial/: package.xml  setup.cfg  setup.py
commu-intell/ros2/src/tutorial/tutorial/: client.py  listener.py  listenerpy  publisher.py  service.py
commu-intell/sensors/gps/: read_gps.py  requirements.txt
commu-intell/src/cv_basics/: package.xml
commu-intell/src/joystick/: setup.py
commu-intell/src/minirover/: setup.cfg
components/jetson/: README.md
components/odrive/: README.md  axis.py  axis_updated.py  calibration.py  config.yml  controller.py  controller_updated.py  encoder.py  encoder_updated.py  enum_ref.py  enums.py  enums_updated.py  full_calibration.py  motor.py  motor_updated.py  odrive.py  one_time_calibration.py  requirements.txt  sensing.py  telemetry.py  test_run.py  test_run_async.py  tuning.py  utils.py  utils_updated.py
components/ros/: ros_packages.bash
components/test_car/: pca9685.py
components/zed/: README.md  yolo.py
gazebo/: Dockerfile  README.md  config.yaml  tutorial.sdf
robot-arm/research/stanford/: arm_controller.py
robot-arm/ros/: .gitignore  setup.bash
robot-arm/ros/src/: cougarbot  cougarbot_moveit_config
robot-arm/ros/src/ARM_GL_FEASimplified/: CMakeLists.txt  package.xml
robot-arm/ros/src/ARM_GL_FEASimplified/config/: joint_names_ARM_GL_FEASimplified.yaml
robot-arm/ros/src/ARM_GL_FEASimplified/launch/: display.launch  gazebo.launch
robot-arm/ros/src/ARM_GL_FEASimplified/meshes/: elbow_link.STL  linear_link.STL  shoulder_link.STL
robot-arm/ros/src/ARM_GL_FEASimplified/urdf/: ARM_GL_FEASimplified.csv  ARM_GL_FEASimplified.urdf
robot-arm/ros/src/arm_gl_fea_simplified/: CMakeLists.txt  package.xml
robot-arm/ros/src/arm_gl_fea_simplified/config/: joint_names_arm_gl_fea_simplified.yaml
robot-arm/ros/src/arm_gl_fea_simplified/launch/: display.launch  gazebo.launch
robot-arm/ros/src/arm_gl_fea_simplified/meshes/: base_link.STL  elbow_link.STL  platter_link.STL  shoulder_link.STL  vertical_link.STL
robot-arm/ros/src/arm_gl_fea_simplified/urdf/: arm_gl_fea_simplified.csv  arm_gl_fea_simplified.urdf  arm_gl_fea_simplified_original.urdf
robot-arm/temporary/: Actions.msg  bindings.json  input_transformer.py
robot-arm/ws_moveit/: .gitignore
robot-arm/ws_moveit/src/: .gitignore  .rosinstall  .rosinstall.bak
robot-arm/ws_moveit/src/brc_arm/brc_arm_config/: .setup_assistant  CMakeLists.txt  package.xml
robot-arm/ws_moveit/src/brc_arm/brc_arm_config/config/: brc_arm_description.srdf  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml
robot-arm/ws_moveit/src/brc_arm/brc_arm_config/launch/: brc_arm_description_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
robot-arm/ws_moveit/src/brc_arm/brc_arm_config/scripts/: move_group_joint_test.py  move_group_pose_test.py
robot-arm/ws_moveit/src/ros_control_boilerplate/: CMakeLists.txt
robot-arm/ws_moveit/src/ros_control_boilerplate/include/ros_control_boilerplate/: generic_hw_interface.hZone.Identifier
robot-arm/ws_moveit/src/ros_control_boilerplate/src/: generic_hw_control_loop.cpp  generic_hw_interface.cpp
ros/src/beginner_tutorials/: CMakeLists.txt
rover/: ros_packages.bash
rover/src/cv_basics/: setup.py
rover/src/motortest/: package.xml  setup.cfg  setup.py
src/artag/: package.xml  setup.py
src/artag/artag/: README.md  artagdetection.py  artagdetectionimage.py  detect.py  gotopos.py
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/action/: Reboot.action
src/custom_interfaces/msg/: ControlMessage.msg  OdriveStatus.msg
src/custom_interfaces/srv/: Reboot.srv
src/cv_basics/: package.xml
src/cv_basics/cv_basics/: subscriber.py
src/drive/: package.xml  setup.cfg  setup.py
src/drive/drive/: diff_drive.py  drive_subscriber.py  (+4 more)
src/joystick/: package.xml  setup.py
src/obstacle_detection/: obstacledect
src/obstacle_detection2/: package.xml  setup.cfg  setup.py
src/pos_controller/: package.xml  setup.cfg  setup.py
src/shared_msgs/: CMakeLists.txt  package.xml
test_car/: pca9685.py  pin_demo.py
tutorial/: Dockerfile  README.md  entrypoint.sh  requirements.txt
(+289 files in other folders)
